syntax = "proto3";

option go_package = "/proto";

package management;

service ManagementService {

  rpc RegisterPeer(RegisterPeerRequest) returns (RegisterPeerResponse) {}

  // health check endpoint
  rpc isHealthy(Empty) returns (Empty) {}
}

message RegisterPeerRequest {
  // Wireguard public key
  string key = 1;

  // Pre-authorized setup key
  string setupKey = 2;
}

message RegisterPeerResponse {

}

message Empty {

}